[package]
name = "ease-off"
version = "0.1.2"
edition = "2021"
rust-version = "1.80.0"

description = "An easy, opinionated exponential backoff implementation."
keywords = ["backoff", "exponential", "retry"]
repository = "https://github.com/transact-rs/ease-off"
authors = ["Austin Bonander <austin.bonander+ease-off@gmail.com>"]
license = "MIT OR Apache-2.0"

[features]
tokio = ["dep:tokio", "__futures"]
async-io-2 = ["dep:async-io-2", "__futures"]

__futures = ["pin-project"]

[dependencies]
pin-project = { version = "1", optional = true }
rand = "0.8.5"
thiserror = "1.0.64"

[dependencies.tokio]
version = "1.0.1"
features = ["rt", "time"]
optional = true

# Also provides support for `async-std ^1.13`
[dependencies.async-io-2]
package = "async-io"
version = "2"
optional = true

[dev-dependencies]
futures = "0.3.30"

[dev-dependencies.tokio]
version = "1.39.3"
features = ["rt", "time", "macros"]

[dev-dependencies.tokio-util]
version = "0.7.12"
features = ["time"]

[dev-dependencies.async-std]
version = "1.13.0"
features = ["attributes"]

[[example]]
name = "tokio"
required-features = ["tokio"]

[[example]]
name = "tokio-concurrent"
required-features = ["tokio"]

[[example]]
name = "async-std"
required-features = ["async-io-2"]

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
